# controller/dummy.go
@@ -7,10 +7,7 @@ import (
 	"net/http"
 	"strconv"
 
-	log "github.com/sirupsen/logrus"
-
 	"github.com/gin-gonic/gin"
-	"gorm.io/gorm"
 )
 
 // NewDummy godoc
@@ -19,22 +16,29 @@ import (
 //	@Description	save dummy in database
 //	@Tags			dummy
 //	@Accept			json
+//	 @Param   example     body     model.Dummy     true  "Dummy example"     example(model.Dummy)
 //	@Produce		json
 //	@Success		200	{object}	model.Dummy
-//	@Failure		400	{object}	httputil.HTTPError
-//	@Failure		401	{object}	httputil.HTTPError
-//	@Failure		404	{object}	httputil.HTTPError
-//	@Failure		500	{object}	httputil.HTTPError
+//	@Failure		400	{object}	httputil.HTTPError400
+//	@Failure		404	{object}	httputil.HTTPError404
+//	@Failure		500	{object}	httputil.HTTPError500
 //	@Router			/dummy/new [post]
 func (c *Controller) NewDummy(ctx *gin.Context) {
 	var dummy model.Dummy
 	if err := ctx.BindJSON(&dummy); err != nil {
-		httputil.NewError(ctx, http.StatusBadRequest, err)
+		httputil.NewError400(ctx, http.StatusBadRequest, err)
 		return
 	}
 
-	if err := dummy.QCreateDummy(database.DB); err != nil {
-		httputil.NewError(ctx, http.StatusBadRequest, err)
+	if code, err := dummy.QCreateDummy(database.DB); err != nil {
+		switch code {
+		case 400:
+			httputil.NewError400(ctx, http.StatusBadRequest, err)
+		case 404:
+			httputil.NewError404(ctx, http.StatusNotFound, err)
+		default:
+			httputil.NewError500(ctx, http.StatusInternalServerError, err)
+		}
 		return
 	}
 
@@ -47,12 +51,24 @@ func (c *Controller) NewDummy(ctx *gin.Context) {
 //	@Description	Select all Dummies
 //	@Tags			dummy
 //	@Accept			json
+//
+// @Param   start  query  int  true  "start example"  example(0)
+// @Param   count  query  int  true  "count example"  example(10)
+//
 //	@Produce		json
 //	@Success		200	{array}		model.Dummy
 //	@Router			/dummy/dummies [get]
 func (c *Controller) Dummies(ctx *gin.Context) {
-	start, _ := strconv.Atoi(ctx.Query("start"))
-	count, _ := strconv.Atoi(ctx.Query("count"))
+	start, err := strconv.Atoi(ctx.Query("start"))
+	if err != nil {
+		httputil.NewError400(ctx, http.StatusBadRequest, err)
+		return
+	}
+	count, err := strconv.Atoi(ctx.Query("count"))
+	if err != nil {
+		httputil.NewError400(ctx, http.StatusBadRequest, err)
+		return
+	}
 
 	if count > 10 || count < 1 {
 		count = 10
@@ -61,9 +77,17 @@ func (c *Controller) Dummies(ctx *gin.Context) {
 		start = 0
 	}
 	var dummy = model.Dummy{}
-	dummies, err := dummy.QGetDummies(database.DB, start, count)
+	dummies, code, err := dummy.QGetDummies(database.DB, start, count)
 	if err != nil {
-		log.Fatal(err)
+		switch code {
+		case 400:
+			httputil.NewError400(ctx, http.StatusBadRequest, err)
+		case 404:
+			httputil.NewError404(ctx, http.StatusNotFound, err)
+		default:
+			httputil.NewError500(ctx, http.StatusInternalServerError, err)
+		}
+		return
 	}
 
 	ctx.JSON(200, dummies)
@@ -75,26 +99,29 @@ func (c *Controller) Dummies(ctx *gin.Context) {
 //	@Description	Get one Dummy from ID
 //	@Tags			dummy
 //	@Accept			json
+//
+// @Param   int  query  int  true  "example: 1"  "Dummy ID"
+//
 //	@Produce		json
 //	@Success		200	{object}	model.Dummy
-//	@Failure		400	{object}	httputil.HTTPError
-//	@Failure		404	{object}	httputil.HTTPError
-//	@Failure		500	{object}	httputil.HTTPError
+//	@Failure		400	{object}	httputil.HTTPError400
+//	@Failure		404	{object}	httputil.HTTPError404
+//	@Failure		500	{object}	httputil.HTTPError500
 //	@Router			/dummy/{id} [get]
 func (c *Controller) GetDummy(ctx *gin.Context) {
 	id, err := strconv.Atoi(ctx.Param("id"))
 	if err != nil {
-		httputil.NewError(ctx, http.StatusBadRequest, err)
+		httputil.NewError400(ctx, http.StatusBadRequest, err)
 		return
 	}
 
 	dummy := model.Dummy{ID: id}
-	if err = dummy.QGetDummy(database.DB); err != nil {
-		switch err {
-		case gorm.ErrRecordNotFound:
-			httputil.NewError(ctx, http.StatusNotFound, err)
+	if code, err := dummy.QGetDummy(database.DB); err != nil {
+		switch code {
+		case 404:
+			httputil.NewError404(ctx, http.StatusNotFound, err)
 		default:
-			httputil.NewError(ctx, http.StatusInternalServerError, err)
+			httputil.NewError500(ctx, http.StatusInternalServerError, err)
 		}
 		return
 	}
@@ -108,25 +135,26 @@ func (c *Controller) GetDummy(ctx *gin.Context) {
 //	@Description	Updates a dummy in database (id req)
 //	@Tags			dummy
 //	@Accept			json
+//	 @Param   example     body     model.Dummy     true  "Dummy example"     example(model.Dummy)
 //	@Produce		json
 //	@Success		200	{object}	model.Dummy
-//	@Failure		400	{object}	httputil.HTTPError
-//	@Failure		404	{object}	httputil.HTTPError
-//	@Failure		500	{object}	httputil.HTTPError
+//	@Failure		400	{object}	httputil.HTTPError400
+//	@Failure		404	{object}	httputil.HTTPError404
+//	@Failure		500	{object}	httputil.HTTPError500
 //	@Router			/dummy/update [put]
 func (c *Controller) UpdateDummy(ctx *gin.Context) {
 	var dummy model.Dummy
 	if err := ctx.BindJSON(&dummy); err != nil {
-		httputil.NewError(ctx, http.StatusBadRequest, err)
+		httputil.NewError400(ctx, http.StatusBadRequest, err)
 		return
 	}
 
-	if err := dummy.QUpdateDummy(database.DB); err != nil {
-		switch err {
-		case gorm.ErrRecordNotFound:
-			httputil.NewError(ctx, http.StatusNotFound, err)
+	if code, err := dummy.QUpdateDummy(database.DB); err != nil {
+		switch code {
+		case 404:
+			httputil.NewError404(ctx, http.StatusNotFound, err)
 		default:
-			httputil.NewError(ctx, http.StatusInternalServerError, err)
+			httputil.NewError500(ctx, http.StatusInternalServerError, err)
 		}
 		return
 	}
